fix: wrap and remove fixed widths on header links
Apply wrapping to header links and remove fixed
widths causing overflow on smaller dimension screens

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ body {
 }
 
 ul {
-    min-width: max-content;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -89,6 +88,7 @@ button,
 
 .initial {
     gap: 26px;
+    flex-wrap: wrap;
 }
 
 .final {
@@ -106,8 +106,6 @@ button,
 }
 
 .img {
-    min-width: 300px;
-    min-height: 200px;
     text-align: center;
     background-color: slategrey;
     display: flex;
@@ -150,6 +148,7 @@ button,
 
 .cta {
     /* TODO: add padding and margins */
+    padding: 16px;
     background-color: #3882F6;
 }
 
